--- a/modules/ubuntu-vm/templates/cloud-init.user-data.yaml
+++ b/modules/ubuntu-vm/templates/cloud-init.user-data.yaml
@@ -37,7 +37,7 @@ power_state:
   condition: true
 
 runcmd:
-  - sed -i 's/^GRUB_CMDLINE_LINUX=.*/GRUB_CMDLINE_LINUX="mitigations=off"/g' /etc/default/grub
+  - sed -i 's/^GRUB_CMDLINE_LINUX=.*/GRUB_CMDLINE_LINUX="mitigations=off ipv6.disable=1"/g' /etc/default/grub # my pip install takes forever over ipv6; could be buggy hw nic
   - update-grub
   - bash /tmp/launch_script.sh
 
